tests-integration/fixtures/checking/1778051580_match_type_semantics/Main.snap
---
source: tests-integration/tests/checking/generated.rs
assertion_line: 28
expression: report
---
Terms
isEq ::
  forall (@a :: Type) (@b :: Type) (@o :: Type).
    IsEq (a :: Type) (b :: Type) (o :: Type) => (a :: Type) -> (b :: Type) -> (o :: Type)
Unit :: Unit
Output :: Output
testEqConcrete :: Output
testSkolemRight :: forall (x :: Type). (x :: Type) -> Output
testSkolemLeft :: forall (x :: Type). (x :: Type) -> Output
testSkolemIsEq :: forall (x :: Type) (y :: Type). (x :: Type) -> (y :: Type) -> Output
typeEquals ::
  forall (t35 :: Type) (@a :: (t35 :: Type)) (@b :: (t35 :: Type)).
    TypeEquals @(t35 :: Type) (a :: (t35 :: Type)) (b :: (t35 :: Type)) => Unit
testOpenRows :: Unit
rowSame ::
  forall (k :: Type) (@a :: (k :: Type)) (@b :: (k :: Type)).
    RowSame @(k :: Type) (a :: (k :: Type)) (b :: (k :: Type)) => Unit
testOpenRowsNoFd :: Unit

Types
IsEq :: Type -> Type -> Type -> Constraint
Unit :: Type
Output :: Type
TypeEquals :: forall (k :: Type). (k :: Type) -> (k :: Type) -> Constraint
RowSame :: forall (k :: Type). (k :: Type) -> (k :: Type) -> Constraint

Classes
class forall (a :: Type) (b :: Type) (o :: Type). IsEq (a :: Type) (b :: Type) (o :: Type)
  isEq ::
  forall (@a :: Type) (@b :: Type) (@o :: Type).
    IsEq (a :: Type) (b :: Type) (o :: Type) => (a :: Type) -> (b :: Type) -> (o :: Type)
class forall (k :: Type) (a :: (k :: Type)) (b :: (k :: Type)). TypeEquals @(k :: Type) (a :: (k :: Type)) (b :: (k :: Type))
class forall (k :: Type) (a :: (k :: Type)) (b :: (k :: Type)). RowSame @(k :: Type) (a :: (k :: Type)) (b :: (k :: Type))
  rowSame ::
  forall (k :: Type) (@a :: (k :: Type)) (@b :: (k :: Type)).
    RowSame @(k :: Type) (a :: (k :: Type)) (b :: (k :: Type)) => Unit

Instances
instance forall (t9 :: Type). IsEq (t9 :: Type) (t9 :: Type) Output
instance forall (t11 :: Type) (t12 :: Type). IsEq (t11 :: Type) (t12 :: Type) Output
instance forall (t16 :: Type) (t15 :: (t16 :: Type)).
  TypeEquals @(t16 :: Type) (t15 :: (t16 :: Type)) (t15 :: (t16 :: Type))
instance forall (t20 :: Type) (t19 :: (t20 :: Type)).
  RowSame @(t20 :: Type) (t19 :: (t20 :: Type)) (t19 :: (t20 :: Type))

Roles
Unit = []
Output = []

Diagnostics
error[NoInstanceFound]: No instance found for: IsEq (x :: Type) Unit Output
  --> 17:1..17:41
   |
17 | testSkolemRight :: forall x. x -> Output
   | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
error[NoInstanceFound]: No instance found for: IsEq Unit (x :: Type) Output
  --> 20:1..20:40
   |
20 | testSkolemLeft :: forall x. x -> Output
   | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
error[NoInstanceFound]: No instance found for: IsEq (y :: Type) (x :: Type) Output
  --> 23:1..23:47
   |
23 | testSkolemIsEq :: forall x y. x -> y -> Output
   | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
error[NoInstanceFound]: No instance found for: RowSame @Type { params :: Unit | ?47 } { query :: Unit | ?50 }
  --> 44:1..44:25
   |
44 | testOpenRowsNoFd :: Unit
   | ^~~~~~~~~~~~~~~~~~~~~~~~
